--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="assets/css/app.e17946204bc8c7decedc.css" rel="stylesheet"></head>
+<link href="assets/css/app.3c2610c2495deaf23d85.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -66,7 +66,9 @@
     <!--Block 1-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір коштів на гуманітарну допомогу</div>
+        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
+          гуманітарну допомогу
+        </div>
         <div class="block_one-info_text">
           <p>
             Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
@@ -86,7 +88,9 @@
     <!--Block 2-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір гуманітарної допомоги</div>
+        <div class="block_one-info_title js-nav-target" data-text="Збір гуманітарної допомоги">Збір гуманітарної
+          допомоги
+        </div>
         <div class="block_one-info_text">
           Будь-яка допомога доречна. Їжа, одяг, медикаменти, медичне обладнання, аптечки - що завгодно, що може стати у
           нагоді постраждалим та біженцям з зони ведення активних бойових дій. Ви можете зібрати гуманітарну допомогу на
@@ -109,7 +113,9 @@
     <!--Block 3-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Отримання гуманітарної допомоги</div>
+        <div class="block_one-info_title js-nav-target" data-text="Отримання гуманітарної допомоги">Отримання
+          гуманітарної допомоги
+        </div>
         <div class="block_one-info_text">
           <p>
             Втратив домівку, був змушений терміново покинути дім або знаходишся у скрутному становищі? Ми можемо
@@ -132,7 +138,8 @@
     <!--Block 4-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір коштів на відновлення зруйнованих будівель та
+        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на відновлення зруйнованих будівель та
+          інфраструктури">Збір коштів на відновлення зруйнованих будівель та
           інфраструктури
         </div>
         <div class="block_one-info_text">
@@ -185,8 +192,8 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block">
-    <div class="bank_block-title title-1">Банківський переказ</div>
+  <div class="bank_block js-bank-block js-target-block">
+    <div class="bank_block-title title-1 js-nav-target" data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list">
 
       <!--EUR (євро)-->
@@ -233,11 +240,11 @@
         </div>
       </div>
 
-      <!--USD (гривня)-->
+      <!--USD (долар)-->
       <div class="bank_block-list_item">
         <div class="toggle_title js-toggle-trigger">
           <div class="toggle_title_name">
-            USD (гривня)
+            USD (долар)
           </div>
           <div class="toggle_title_icon">
             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -532,6 +539,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.e17946204bc8c7decedc.js"></script><script type="text/javascript" src="assets/js/app.e17946204bc8c7decedc.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.3c2610c2495deaf23d85.js"></script><script type="text/javascript" src="assets/js/app.3c2610c2495deaf23d85.js"></script></body>
 
 </html>
