fixed text-transform for safari

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -51,7 +51,7 @@
       <img width="1600" height="340" src="/assets/img/black-banner.png"/>
     </div>
     <div class="width_block-info">
-      <div class="width_block-info_title">
+      <div class="width_block-info_title title-1">
         Catastrophe description in Ukraine
       </div>
       <div class="width_block-info_text">
@@ -76,7 +76,7 @@
     <!--Block 1-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Fundraising for humanitarian help</div>
+        <div class="block_one-info_title js-nav-target" data-text="Fundraising for humanitarian help">Fundraising for humanitarian help</div>
         <div class="block_one-info_text">
           <p>
             The War has stopped to organize supplying the most important – medicines and food. Many people has lost
@@ -95,7 +95,7 @@
     <!--Block 2-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Humanitarian aid collection</div>
+        <div class="block_one-info_title js-nav-target" data-text="Humanitarian aid collection">Humanitarian aid collection</div>
         <div class="block_one-info_text">
           <p>
             Any help is useful. Food, clothes, medicines, medicine equipment, first aid kits - any that can help injured
@@ -118,7 +118,7 @@
     <!--Block 3-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Humanitarian aid receiving</div>
+        <div class="block_one-info_title js-nav-target" data-text="Humanitarian aid receiving">Humanitarian aid receiving</div>
         <div class="block_one-info_text">
           <p>
             You lost your home, you are forced to leave home or hiding to survive? We can help you to receive
@@ -140,7 +140,7 @@
     <!--Block 4-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">
+        <div class="block_one-info_title js-nav-target" data-text="Money collection for ruined buildings’ reconstruction and infrastructure">
           Money collection for ruined buildings’ reconstruction and infrastructure
         </div>
         <div class="block_one-info_text">
@@ -190,8 +190,8 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block">
-    <div class="bank_block-title title-1">Bank Transfer</div>
+  <div class="bank_block js-bank-block js-target-block">
+    <div class="bank_block-title title-1 js-nav-target" data-text="Bank Transfer">Bank Transfer</div>
     <div class="bank_block-list">
 
       <!--EUR (euro)-->
