--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,9 @@
     <!--Block 1-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір коштів на гуманітарну допомогу</div>
+        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
+          гуманітарну допомогу
+        </div>
         <div class="block_one-info_text">
           <p>
             Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
@@ -88,7 +90,9 @@
     <!--Block 2-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір гуманітарної допомоги</div>
+        <div class="block_one-info_title js-nav-target" data-text="Збір гуманітарної допомоги">Збір гуманітарної
+          допомоги
+        </div>
         <div class="block_one-info_text">
           Будь-яка допомога доречна. Їжа, одяг, медикаменти, медичне обладнання, аптечки - що завгодно, що може стати у
           нагоді постраждалим та біженцям з зони ведення активних бойових дій. Ви можете зібрати гуманітарну допомогу на
@@ -111,7 +115,9 @@
     <!--Block 3-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Отримання гуманітарної допомоги</div>
+        <div class="block_one-info_title js-nav-target" data-text="Отримання гуманітарної допомоги">Отримання
+          гуманітарної допомоги
+        </div>
         <div class="block_one-info_text">
           <p>
             Втратив домівку, був змушений терміново покинути дім або знаходишся у скрутному становищі? Ми можемо
@@ -134,7 +140,8 @@
     <!--Block 4-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір коштів на відновлення зруйнованих будівель та
+        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на відновлення зруйнованих будівель та
+          інфраструктури">Збір коштів на відновлення зруйнованих будівель та
           інфраструктури
         </div>
         <div class="block_one-info_text">
@@ -187,8 +194,8 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block">
-    <div class="bank_block-title title-1">Банківський переказ</div>
+  <div class="bank_block js-bank-block js-target-block">
+    <div class="bank_block-title title-1 js-nav-target" data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list">
 
       <!--EUR (євро)-->
@@ -235,11 +242,11 @@
         </div>
       </div>
 
-      <!--USD (гривня)-->
+      <!--USD (долар)-->
       <div class="bank_block-list_item">
         <div class="toggle_title js-toggle-trigger">
           <div class="toggle_title_name">
-            USD (гривня)
+            USD (долар)
           </div>
           <div class="toggle_title_icon">
             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
