--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="assets/css/app.3c2610c2495deaf23d85.css" rel="stylesheet"></head>
+<link href="assets/css/app.b68d93347def83dd390f.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -194,324 +194,7 @@
 
   <div class="bank_block js-bank-block js-target-block">
     <div class="bank_block-title title-1 js-nav-target" data-text="Банківський переказ">Банківський переказ</div>
-    <div class="bank_block-list">
-
-      <!--EUR (євро)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            EUR (євро)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Angaben zum Unternehmen <br>
-          Name der Firma <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN Code <br>
-          UA453052990000026007011609571 <br>
-          Name der Bank <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          SWIFT-Code der Bank <br>
-          PBANUA2X <br>
-          Firmenanschrift <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Korrespondenzbanken <br>
-          Korrespondenzbankkonto <br>
-          400886700401 <br>
-          SWIFT-Code der Korrespondenzbank <br>
-          COBADEFF <br>
-          Korrespondenzbank <br>
-          Commerzbank AG, Frankfurt am Main, Germany <br>
-          Korrespondenzbankkonto <br>
-          6231605145 <br>
-          SWIFT-Code der Korrespondenzbank <br>
-          CHASDEFX <br>
-          Korrespondenzbank <br>
-          J.P.MORGAN AG, FRANKFURT AM MAIN, GERMANY <br>
-          <b>Verwendungszweck: Gemeinnützige Hilfe</b> <br>
-
-        </div>
-      </div>
-
-      <!--USD (долар)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            USD (долар)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Реквізити підприємства/Company details <br>
-          Назва підприємства/company Name <br>
-          <b>Міжнародна громадська організація “Рада Сводоби”</b> <br>
-          IBAN Code <br>
-          UA253052990000026000031611472 <br>
-          Назва банку/Name of the bank <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          SWIFT code банку/Bank SWIFT Code <br>
-          PBANUA2X <br>
-          Адреса підприємства/Company address <br>
-          UA 02094 м Київ вул Червоноткацька б.59а <br>
-          Банки кореспонденти/Correspondent banks <br>
-          Рахунок у банку-кореспонденті/Account in the correspondent bank <br>
-          001-1-000080 <br>
-          SWIFT Code банку-кореспондента/SWIFT Code of the correspondent bank <br>
-          CHASUS33 <br>
-          Банк-кореспондент/Correspondent bank <br>
-          JP Morgan Chase Bank, New York ,USA <br>
-          Рахунок у банку-кореспонденті/Account in the correspondent bank <br>
-          890-0085-754 <br>
-          SWIFT Code банку-кореспондента/SWIFT Code of the correspondent bank <br>
-          IRVT US 3N <br>
-          Банк-кореспондент/Correspondent bank <br>
-          The Bank of New York Mellon, New York, USA <br>
-          <b>Призначення платежу: Благодійна допомога</b>
-        </div>
-      </div>
-
-      <!--GBR (фунт стерлінг)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            GBR (фунт стерлінг)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Company details <br>
-          Company Name <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN Code <br>
-          UA323052990000026007031611011 <br>
-          Name of the bank <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          Bank SWIFT Code <br>
-          PBANUA2X <br>
-          Company address <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Correspondent banks <br>
-          Account in the correspondent bank <br>
-          24549501 SORT CODE 609242 <br>
-          SWIFT Code of the correspondent bank <br>
-          CHASGB2L <br>
-          Correspondent bank <br>
-          J P Morgan Chase Bank, Bournemouth, UK <br>
-          <b>Purpose of payment: Charitable assistance</b> <br>
-        </div>
-      </div>
-
-      <!--CHF (швейцарський франк)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            CHF (швейцарський франк)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Angaben zum Unternehmen <br>
-          Name der Firma <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN Code <br>
-          UA153052990000026008011609398 <br>
-          Name der Bank <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          SWIFT-Code der Bank <br>
-          PBANUA2X <br>
-          Firmenanschrift <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Korrespondenzbanken <br>
-          Korrespondenzbankkonto <br>
-          10.602602.0.100 <br>
-          SWIFT-Code der Korrespondenzbank <br>
-          BPCPCHGG <br>
-          Korrespondenzbank <br>
-          Banque de Commerce et de Placements <br>
-          <b>Verwendungszweck: Gemeinnützige Hilfe</b>
-        </div>
-      </div>
-
-      <!--PLZ (польські злоті)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            PLZ (польські злоті)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Dane przedsiębiorstwa <br>
-          Nazwa firmy <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN Code <br>
-          UA393052990000026001011611338 <br>
-          Nazwa banku <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          Kod SWIFT banku <br>
-          PBANUA2X <br>
-          Adres spółki <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Banki korespondenckie <br>
-          Konto w banku korespondencyjnym/Account in the correspondent bank <br>
-          PL13124000013140533111120301 <br>
-          Kod SWIFT banku korespondenta <br>
-          PKOPPLPW <br>
-          Bank korespondencyjny <br>
-          Bank Pekao/Grupa Pekao S.A., Warsaw, Poland <br>
-          <b>Cel wpłaty: Pomoc charytatywna</b>
-        </div>
-      </div>
-
-      <!--JPY (японська єна)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            JPY (японська єна)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          企業の詳細 <br>
-          会社名 <br>
-          <b>International NGO “Council of Freedom” </b><br>
-          IBAN Code <br>
-          UA573052990000026007001612341 <br>
-          銀行名 <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          銀行のSWIFTコード <br>
-          PBANUA2X <br>
-          会社の住所 <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          対応する銀行 <br>
-          コルレス銀行口座 <br>
-          653-0467367 <br>
-          コルレス銀行のSWIFTコード <br>
-          BOTKJPJT <br>
-          コルレス銀行 <br>
-          The Bank of Tokyo Mitsubishi <br>
-          <b>支払いの目的：慈善支援</b> <br>
-        </div>
-      </div>
-
-      <!--NOK (норвезька крона)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            NOK (норвезька крона)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Detaljer om bedriften <br>
-          Navn på firma <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN koden <br>
-          UA333052990000026000031608515 <br>
-          Navn på banken <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          SWIFT-koden til banken <br>
-          PBANUA2X <br>
-          Firma adresse <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Korrespondentbanker <br>
-          Korrespondent bankkonto <br>
-          7004.02.05169 <br>
-          SWIFT-koden til korrespondentbanken <br>
-          DNBANOKK <br>
-          Korrespondentbank <br>
-          DnB NOR Bank ASA, Oslo, Norway <br>
-          <b>Formål med betaling: Veldedig bistand</b> <br>
-        </div>
-      </div>
-
-      <!--SEK (шведська крона)-->
-      <div class="bank_block-list_item">
-        <div class="toggle_title js-toggle-trigger">
-          <div class="toggle_title_name">
-            SEK (шведська крона)
-          </div>
-          <div class="toggle_title_icon">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect class="vert" x="13.1992" width="3.33333" height="30" fill="black"/>
-              <rect class="horiz" x="30" y="14.3999" width="3.33333" height="30" transform="rotate(90 30 14.3999)"
-                    fill="black"/>
-            </svg>
-          </div>
-        </div>
-        <div class="toggle_text js-toggle-target">
-          Uppgifter om företaget <br>
-          Företagets namn <br>
-          <b>International NGO “Council of Freedom”</b> <br>
-          IBAN Code <br>
-          UA383052990000026004001618605 <br>
-          Bankens namn <br>
-          JSC CB "PRIVATBANK", 1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE <br>
-          SWIFT-kod för banken <br>
-          PBANUA2X <br>
-          Företags Adress <br>
-          UA 02094 Kyiv, 59a Chervonotkatska Street <br>
-          Korrespondentbanker <br>
-          Korrespondent bankkonto <br>
-          8033055448 <br>
-          SWIFT-koden för korrespondentbanken <br>
-          IRVTUS3N <br>
-          Korrespondentbank <br>
-          BANK OF NEW YORK MELLON, NEW YORK, USA <br>
-          Korrespondentbankkonto i mellanbanken <br>
-          SE7450000000052018513303 <br>
-          Förmedlande bank <br>
-          SKANDINAVISKA ENSKILDA BANKEN, STOCKHOLM, SWEDEN <br>
-          SWIFT, INTERMEDIÄRBANKENS IDENTIFIKATIONSKOD <br>
-          ESSESESS <br>
-          <b>Syfte med betalning: Bistånd till välgörenhet</b> <br>
-        </div>
-      </div>
-
-    </div>
+    <div class="bank_block-list js-bank-list"></div>
   </div>
 
 </div>
@@ -539,6 +222,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.3c2610c2495deaf23d85.js"></script><script type="text/javascript" src="assets/js/app.3c2610c2495deaf23d85.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.b68d93347def83dd390f.js"></script><script type="text/javascript" src="assets/js/app.b68d93347def83dd390f.js"></script></body>
 
 </html>
