--- a/src/en/index.html
+++ b/src/en/index.html
@@ -170,7 +170,7 @@
     </div>
     <div class="width_block-info">
       <div class="left_part">
-        <img src="/assets/img/svg/logo.svg" alt="Logo">
+        <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
