--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="assets/css/app.1c32a4de4f099f675a3e.css" rel="stylesheet"></head>
+<link href="assets/css/app.39166b9cbb2251eee862.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -166,7 +166,7 @@
     </div>
     <div class="width_block-info">
       <div class="left_part">
-        <img src="/assets/img/svg/logo.svg" alt="Logo">
+        <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
@@ -222,6 +222,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.1c32a4de4f099f675a3e.js"></script><script type="text/javascript" src="assets/js/app.1c32a4de4f099f675a3e.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.39166b9cbb2251eee862.js"></script><script type="text/javascript" src="assets/js/app.39166b9cbb2251eee862.js"></script></body>
 
 </html>
