--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ua">
-
 <head>
   
   <link rel="icon" href="/favicon.ico">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Council of freedom</title>
-<link href="assets/css/app.2332fa17c9284d91f206.css" rel="stylesheet"></head>
+<link href="assets/css/app.9f7cfd9b47b78b619f25.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -18,7 +19,7 @@
 
     <div class="lang">
       <a href="/en/" class="lang-item">en</a>
-      <a href="/" class="lang-item active">ua</a>
+      <div class="lang-item active">ua</div>
     </div>
 
     <div class="socials">
@@ -41,7 +42,27 @@
     <div class="arr_btn down js-next-screen"></div>
   </div>
 
-  <div class="page_nav js-nav-container"></div>
+  <!--NAVIGATION-->
+  <div class="page_nav js-nav-container">
+    <div class="page_nav-item">
+      <div  class="page_nav-item_text" data-target-block="block-1">Збір засобів для гуманітарної допомоги</div>
+    </div>
+    <div class="page_nav-item">
+      <div  class="page_nav-item_text" data-target-block="block-2">Надіслати гуманітарну допомогу</div>
+    </div>
+    <div class="page_nav-item">
+      <div  class="page_nav-item_text" data-target-block="block-3">Отримати гуманітарну допомогу</div>
+    </div>
+    <div class="page_nav-item">
+      <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
+        інфраструктури
+      </a>
+    </div>
+    <div class="page_nav-item">
+      <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
+    </div>
+  </div>
+  <!--NAVIGATION FINISH-->
 
   <div class="width_block black">
     <div class="width_block-banner">
@@ -64,9 +85,9 @@
 
   <div class="blocks">
     <!--Block 1-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-1">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
+        <div class="block_one-info_title " data-text="Збір коштів на гуманітарну допомогу">Збір коштів на
           гуманітарну допомогу
         </div>
         <div class="block_one-info_text">
@@ -86,9 +107,9 @@
     </div>
 
     <!--Block 2-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target" data-text="Збір гуманітарної допомоги">Збір гуманітарної
+        <div class="block_one-info_title " data-text="Збір гуманітарної допомоги">Збір гуманітарної
           допомоги
         </div>
         <div class="block_one-info_text">
@@ -111,9 +132,9 @@
     </div>
 
     <!--Block 3-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-3">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target" data-text="Отримання гуманітарної допомоги">Отримання
+        <div class="block_one-info_title " data-text="Отримання гуманітарної допомоги">Отримання
           гуманітарної допомоги
         </div>
         <div class="block_one-info_text">
@@ -136,11 +157,11 @@
     </div>
 
     <!--Block 4-->
-    <div class="block_one js-target-block">
+    <div class="block_one js-target-block" id="block-4">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target" data-text="Збір коштів на відновлення зруйнованих будівель та
-          інфраструктури">Збір коштів на відновлення зруйнованих будівель та
-          інфраструктури
+        <div class="block_one-info_title "
+             data-text="Збір коштів на відновлення зруйнованого житла та інфраструктури">
+          Збір коштів на відновлення зруйнованого житла та інфраструктури
         </div>
         <div class="block_one-info_text">
           <p>За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
@@ -151,7 +172,7 @@
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-bank-block-trigger">Надіслати кошти</button>
+          <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
       <div class="block_one-img">
@@ -159,6 +180,8 @@
       </div>
     </div>
   </div>
+
+  <div class="title-1 width_block_pre-title ">Ми під час війни</div>
 
   <div class="width_block white half">
     <div class="width_block-banner">
@@ -192,9 +215,9 @@
     </div>
   </div>
 
-  <div class="bank_block js-bank-block js-target-block">
-    <div class="bank_block-title title-1 js-nav-target" data-text="Банківський переказ">Банківський переказ</div>
-    <div class="bank_block-list js-bank-list"></div>
+  <div class="bank_block js-bank-block js-target-block" id="block-bank" >
+    <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
+    <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
 
 </div>
@@ -207,7 +230,7 @@
 
     <div class="lang">
       <a href="/en/" class="lang-item">en</a>
-      <a href="/" class="lang-item active">ua</a>
+      <div class="lang-item active">ua</div>
     </div>
 
     <div class="socials">
@@ -222,6 +245,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2332fa17c9284d91f206.js"></script><script type="text/javascript" src="assets/js/app.2332fa17c9284d91f206.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.9f7cfd9b47b78b619f25.js"></script><script type="text/javascript" src="assets/js/app.9f7cfd9b47b78b619f25.js"></script></body>
 
 </html>
