--- a/src/en/infrastructure.html
+++ b/src/en/infrastructure.html
@@ -19,8 +19,8 @@
     </a>
 
     <div class="lang">
-      <div href="/en/" class="lang-item active">en</div>
-      <a href="/en/infrastructure.html" class="lang-item">ua</a>
+      <div class="lang-item active">en</div>
+      <a href="infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -112,7 +112,7 @@
 
     <div class="lang">
       <div class="lang-item active">en</div>
-      <a href="/en/infrastructure.html" class="lang-item">ua</a>
+      <a href="infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
