New infrustructure page

--- a/src/en/infrastructure.html
+++ b/src/en/infrastructure.html
@@ -20,7 +20,7 @@
 
     <div class="lang">
       <div class="lang-item active">en</div>
-      <a href="infrastructure.html" class="lang-item">ua</a>
+      <a href="/infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -112,7 +112,7 @@
 
     <div class="lang">
       <div class="lang-item active">en</div>
-      <a href="infrastructure.html" class="lang-item">ua</a>
+      <a href="/infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
