--- a/en/infrastructure.html
+++ b/en/infrastructure.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.de520e8bac681464893b.css" rel="stylesheet"></head>
+<link href="../assets/css/app.c16adecfc4e4fbc94fcd.css" rel="stylesheet"></head>
 <body class="infrastructure-page">
 <header class="header">
   <div class="container">
@@ -18,7 +18,7 @@
 
     <div class="lang">
       <div class="lang-item active">en</div>
-      <a href="infrastructure.html" class="lang-item">ua</a>
+      <a href="/infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -110,7 +110,7 @@
 
     <div class="lang">
       <div class="lang-item active">en</div>
-      <a href="infrastructure.html" class="lang-item">ua</a>
+      <a href="/infrastructure.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -125,5 +125,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.de520e8bac681464893b.js"></script><script type="text/javascript" src="../assets/js/app.de520e8bac681464893b.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.c16adecfc4e4fbc94fcd.js"></script><script type="text/javascript" src="../assets/js/app.c16adecfc4e4fbc94fcd.js"></script></body>
 </html>
