Infrastructure page translation

--- a/src/en/infrastructure.html
+++ b/src/en/infrastructure.html
@@ -65,29 +65,22 @@
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
-        Збір коштів на відновлення зруйнованого житла та інфраструктури
+        Money collection for ruined buildings’ reconstruction and infrastructure
       </h2>
       <div class="description_info-text">
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не.
+          The war suspended the possibility of supplying the most important thing to Ukraine - medicines and food. Many
+          people are left without a roof over their heads - they are provided with shelter, but there are not enough
+          resources. We are doing everything we can to prevent a humanitarian crisis. Join the rescue.
         </p>
         <p>
-          Долучайтеся до порятунку. Війна призупинила можливість поставок до України найважливішого - медикаментів та
-          харчів. Багато людей залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми
-          робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          According to KSE’s and volunteers’ information approximately 200 educational institutions, 30 medical
+          institutions, 8 churches, 1600 residential buildings, 19 administrative buildings, 23 plants, 12 airfields,
+          5 heat power plants and 5 hydro power plants were partially / fully destroyed.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-
-
+          Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed. You can join in
+          raising funds to rebuild damaged housing and infrastructure
         </p>
       </div>
     </div>
@@ -96,7 +89,7 @@
   <!--Блок опис FINISH-->
 
   <!--Банківський переказ-->
-  <div class="bank_block js-bank-block" id="block-bank" >
+  <div class="bank_block js-bank-block" id="block-bank">
     <div class="bank_block-title title-1">Bank Transfer</div>
     <div class="bank_block-list js-bank-list" data-type="infrastructure"></div>
   </div>
