--- a/src/infrastructure.html
+++ b/src/infrastructure.html
@@ -68,25 +68,21 @@
       </h2>
       <div class="description_info-text">
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
+          Війна призупинила можливість постачання до України найважливішого - медикаментів та харчів. Багато людей
           залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не.
+          попередити гуманітарну кризу. Долучайтеся до порятунку.
         </p>
         <p>
-          Долучайтеся до порятунку. Війна призупинила можливість поставок до України найважливішого - медикаментів та
-          харчів. Багато людей залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми
-          робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
+          200 освітніх закладів, 30 закладів охорони здоров'я, 8 церков, 1600 житлових будинків, 19 адміністративних
+          будівель, 23 заводи, 12 летовищ, 5 ТЕС та ГЕС.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-
-
+          Окрім цього зруйновано або виведено з ладу більше 15 тисяч кілометрів автомобільних доріг, 5 тисяч
+          кілометрів залізничних шляхів, 350 мостів та переходів.
+        </p>
+        <p>
+          Ви можете долучитися до збору коштів на відновлення зруйнованого житла та інфраструктури
         </p>
       </div>
     </div>
@@ -95,7 +91,7 @@
   <!--Блок опис FINISH-->
 
   <!--Банківський переказ-->
-  <div class="bank_block js-bank-block js-target-block" id="block-bank" >
+  <div class="bank_block js-bank-block js-target-block" id="block-bank">
     <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
     <div class="bank_block-list js-bank-list" data-type="infrastructure"></div>
   </div>
